--- a/Package.json
+++ b/Package.json
@@ -1,10 +1,16 @@
 {
-  "name" : "Exploracafora",
-  "version" : "0.0.1",
-  "scripts" : {
-    "start" : "node server.js"
+  "name": "Exploracafora",
+  "version": "0.0.1",
+  "scripts": {
+    "start": "node server.js"
   },
-  "dependencies" : {
-    "express" : "latest"
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "express": "latest",
+    "express-session": "^1.13.0",
+    "pg": "^4.5.3"
+  },
+  "engines": {
+    "node": "5.10.1"
   }
 }
