--- a/Package.json
+++ b/Package.json
@@ -1,10 +1,11 @@
 {
-  "name" : "Exploracafora",
-  "version" : "0.0.1",
-  "scripts" : {
-    "start" : "node server.js"
+  "name": "Exploracafora",
+  "version": "0.0.1",
+  "scripts": {
+    "start": "node server.js"
   },
-  "dependencies" : {
-    "express" : "latest"
+  "dependencies": {
+    "express": "latest",
+    "passport-local": "^1.0.0"
   }
 }
