--- a/Package.json
+++ b/Package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Exploracafora",
+  "name": "exploracafora",
   "version": "0.0.1",
   "scripts": {
     "start": "node server.js"
@@ -7,7 +7,7 @@
   "dependencies": {
 
     "express": "latest",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
     "body-parser": "^1.15.0",
     "express": "latest",
     "express-session": "^1.13.0",
