--- a/Package.json
+++ b/Package.json
@@ -5,7 +5,6 @@
     "start": "node server.js"
   },
   "dependencies": {
-
     "express": "latest",
     "passport-local": "^1.0.0",
     "body-parser": "^1.15.0",
@@ -14,6 +13,7 @@
     "pg": "^4.5.3"
   },
   "engines": {
-    "node": "5.10.1"
+    "node": "5.10.1",
+    "npm": "3.8.3"
   }
 }
